# ms_python_boilerplate_template

./: .env.sample  .gitignore  README.md  copier.yaml  pyproject.toml
config/: config.py  logger.py
docker/: Dockerfile  docker-compose.yml
docs/: project_folder_structure.md
shared/src/shared/utils/: numeric.py  text.py
src/{{ _package_name }}/: main,py
src/{{ _package_name }}/utils/: helpers.py
src/{{ _package_name }}/{{ _data_science_folder }}/: pipelines.py
tests/: test_numeric.py  test_text.py
