[project]
name = "{{ _project_name }}"
version = "0.1.0"
description = "Demo project by {{ _author_name }}"
readme = "README.md"
authors = [{ name = "{{ _author_name }}", email = "{{ _author_email }}" }]
requires-python = ">=3.13"
dependencies = [
    "python-dotenv>=1.1.1",
    "rich>=14.1.0",
    "httpx>=1.2.0"
]

[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
    "pytest>=8.4.1",
    "ruff>=0.12.9",
    "rich>=14.1.0",
    "httpx>=1.2.0"
]

[project.scripts]
# Use a fixed key "main" instead of {{ _package_name }}
# The value can still use the Jinja placeholder for package import
main = "{{ _package_name }}.main:main"

[build-system]
requires = ["uv_build>=0.8.12,<0.9.0"]
build-backend = "uv_build"
